<resources>

<!--    Name of App-->
    <string name="app_name">Bikash Chhantyal_Score</string>

<!--    Title of app-->
    <string name="title_text">Basketball Game Score Board</string>

<!--    Names of Team-->
    <string name="first_team_name">Team A</string>
    <string name="second_team_name">Team B</string>

<!--    Scores of both team-->
    <string name="first_team_score">0</string>
    <string name="second_team_score">0</string>

<!--    Button title-->
    <string name="increase_btn">Increase</string>
    <string name="decrease_btn">Decrease</string>
    <string name="three_points">+ 3</string>
    <string name="two_points">+ 2</string>
</resources>