<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--    Team First Layout-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/title_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:layout_marginBottom="18dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@drawable/border_radius">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/first_team_name"
                    android:textAlignment="center"
                    android:textColor="@color/teal_700"
                    android:textSize="20dp"
                    android:id="@+id/team_A_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/first_team_score"
                    android:textAlignment="center"
                    android:textColor="@color/teal_700"
                    android:id="@+id/team_A_score"
                    android:textSize="70dp" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_teams"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=""
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_B_title"
                    android:layout_width="150dp"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/second_team_name"
                    android:textAlignment="center"
                    android:textColor="@color/teal_700"
                    android:textSize="20dp"
                    />

                <TextView
                    android:id="@+id/team_B_score"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/second_team_score"
                    android:textAlignment="center"
                    android:textColor="@color/teal_700"
                    android:textSize="70dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <Button
            android:id="@+id/increase_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/increase_btn" />
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/decrease_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/decrease_btn" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Points"
            android:textSize="20dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/points">

            <RadioButton
                android:id="@+id/one_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1" />

            <RadioButton
                android:id="@+id/two_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2" />

            <RadioButton
                android:id="@+id/three_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3"
                android:textStyle="bold"/>
        </RadioGroup>
    </LinearLayout>


</LinearLayout>